--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 <body>
 
     <h1>STOP WATCH...</h1>
-    <div>
-   
-        <h1 id="hour">00hr</h1>
-        <h1 id="minute">00min</h1>
-        <h1 id="sec">00sec</h1>
-        <h1 id="milisec">00milisec</h1>
-    </div>
-    <div>
-        <button onclick="start()">Start</button>
-        <button onclick="pause()">Pause</button>
-        <button onclick="reset()">Reset</button>
-    </div>
     
+   <div class="container">
+    <div id="time">
+  <span class="digit" id="hr">00</span>
+  <span class="text">Hr</span>
+  <span class="digit" id="mint">00</span>
+  <span class="text">Mint</span>
+  <span class="digit" id="sec">00</span>
+  <span class="text">Sec</span>
+  <span class="digit" id="count">00</span>
+  
+    </div>
+    <div id="btn-container">
+    <button class="btn" id="start" onclick="start()">Start</button>
+    <button class="btn" id="stop" onclick="stop()">Stop</button>
+    <button class="btn" id="reset" onclick="reSet()">Reset</button>
+    </div>
+   </div>
 
 
 
